--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         conda config --append channels https://packages.nnpdf.science/conda
         conda install meson ninja lhapdf pkgconfig --yes
+        conda activate
         mkdir bld
         cd bld
         meson ..
