--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: "3.7"
 
     - name: Run a multi-line script
-      shell: bash
+      shell: bash -l {0}
       run: |
         conda config --append channels https://packages.nnpdf.science/conda
         conda install meson ninja lhapdf pkgconfig --yes
