--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         conda activate 
         conda config --append channels https://packages.nnpdf.science/conda
-        conda install meson ninja lhapdf pkgconfig --yes
+        conda install meson ninja lhapdf pkgconfig cython numpy --yes
         
         mkdir bld
         cd bld
