Try using a setup.py file

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -13,12 +13,17 @@ requirements:
         - ninja
     host:
         - pkgconfig
+        - cython
         - lhapdf
         - numpy
         - python
     run:
         - lhapdf
         - numpy
+
+test:
+  imports:
+    - pylhapdf
 
 about:
     home: "https://zigzah.com"
