--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,5 @@ jobs:
       run: |
         conda activate 
         conda config --append channels https://packages.nnpdf.science/conda
-        conda install meson ninja lhapdf pkgconfig cython numpy --yes
-        
-        mkdir bld
-        cd bld
-        meson ..
-        ninja -vvv
-        ninja install
-        python -c 'import pylhapdf'
+        conda install conda-build --yes
+        conda build conda-recipe
