--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -11,6 +11,7 @@ requirements:
         - cython
         - meson
         - ninja
+        - lhapdf
     host:
         - pkgconfig
         - cython
@@ -18,6 +19,7 @@ requirements:
         - numpy
         - python
     run:
+        - python
         - lhapdf
         - numpy
 
