--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,14 @@ jobs:
                 os: [ubuntu-latest, macos-latest]
                 python-version: ["3.8", "3.9"]
 
+        runs-on: ${{ matrix.os }}
+
         steps:
           - uses: actions/checkout@v2
 
-          - uses: goanpeca/setup-miniconda@v1
+          - uses: conda-incubator/setup-miniconda@v2
             with:
-                auto-update-conda: true
-                python-version: "3.7"
+                python-version: ${{ matrix.python-version }}
 
           - name: Run a multi-line script
             shell: bash -l {0}
