Try adding numpy as build dep

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -9,9 +9,8 @@ requirements:
     build:
         - {{ compiler("cxx") }}
         - cython
-        - meson
-        - ninja
         - lhapdf
+        - numpy
     host:
         - pkgconfig
         - cython
