Try to force a sensible version of numpy

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -10,7 +10,7 @@ requirements:
         - {{ compiler("cxx") }}
         - cython
         - lhapdf
-        - numpy
+        - numpy =1.20
     host:
         - pkgconfig
         - cython
