Make sure all environments coincide

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             if: startsWith(matrix.os, 'macOS')
             shell: bash -l {0}
             run: |
-                conda activate test
+                conda activate
                 curl -L -O https://data.nnpdf.science/MacOSX10.9.sdk.tar.xz
                 tar xfz MacOSX10.9.sdk.tar.xz -C $CONDA_PREFIX
 
@@ -45,6 +45,7 @@ jobs:
           - name: Upload
             shell: bash -l {0}
             run: |
+                conda activate
                 if [ "$RUNNER_OS" = "Linux" ]; then
                     OSFOLDER=linux-64
                 elif [ "$RUNNER_OS" = "macOS" ]; then
