Use lhapdf from conda-forge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
             with:
                 mamba-version: "*"
                 python-version: ${{ matrix.python-version }}
-                channels: "https://packages.nnpdf.science/conda,conda-forge"
+                channels: "conda-forge"
 
           - name: Install macOS SDK
             if: startsWith(matrix.os, 'macOS')
